Add exception tests